fix display of logo partners on tablet view

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -312,5 +312,9 @@ footer{
         }
     }
 
+    #partners{
+        justify-content: space-evenly;
+    }
+
 
 }
